Language Fully Implemented

--- a/src/main/webapp/WEB-INF/Language/Bengali_Language_Pack.properties
+++ b/src/main/webapp/WEB-INF/Language/Bengali_Language_Pack.properties
@@ -1,1 +1,2 @@
-name=chanky
+Click=&#2453;&#2509;&#2482;&#2495;&#2453;&#2509;
+addnewitem=&#2472;&#2468;&#2497;&#2472; &#2438;&#2439;&#2463;&#2503;&#2478; &#2447;&#2472;&#2509;&#2463;&#2509;&#2480;&#2495;
