Language Client Side Implemented

--- a/src/main/webapp/WEB-INF/Language/Bengali_Language_Pack.properties
+++ b/src/main/webapp/WEB-INF/Language/Bengali_Language_Pack.properties
@@ -1,2 +1,22 @@
+#Main Menu -Starts --------------------------------------------------------------------
+menu=&#2478;&#2503;&#2472;&#2497; 
+orderandbill=&#2437;&#2480;&#2509;&#2465;&#2494;&#2480; &#2447;&#2476;&#2434; &#2476;&#2495;&#2482;
+masterandtailor=&#2478;&#2494;&#2488;&#2509;&#2463;&#2494;&#2480; &#2447;&#2476;&#2434; &#2478;&#2495;&#2488;&#2509;&#2468;&#2509;&#2480;&#2495; 
+labourmanager=&#2482;&#2503;&#2476;&#2494;&#2480; &#2478;&#2509;&#2479;&#2494;&#2472;&#2503;&#2460;&#2494;&#2480;
+salesmanmanager=&#2488;&#2503;&#2482;&#2488;&#2478;&#2509;&#2479;&#2494;&#2472; &#2478;&#2509;&#2479;&#2494;&#2472;&#2503;&#2460;&#2494;&#2480;
+usermanagerment=&#2439;&#2441;&#2460;&#2494;&#2480; &#2478;&#2509;&#2479;&#2494;&#2472;&#2503;&#2460;&#2478;&#2503;&#2472;&#2509;&#2463;
+suppliersbook=&#2488;&#2480;&#2476;&#2480;&#2494;&#2489;&#2453;&#2494;&#2480;&#2496; &#2482;&#2503;&#2472;&#2470;&#2503;&#2472; &#2489;&#2495;&#2488;&#2494;&#2476;
+# Main Menu -Ends ----------------------------------------------------------------------
+# Order And Bill Menu Starts -------------------------------------------------------
+addneworder = &#2472;&#2468;&#2497;&#2472; &#2437;&#2480;&#2509;&#2465;&#2494;&#2480; &#2447;&#2472;&#2509;&#2463;&#2509;&#2480;&#2495; 
+addadvance = &#2474;&#2480;&#2503; &#2437;&#2455;&#2509;&#2480;&#2495;&#2478;&nbsp; (Advance)
+editorderdetails=&#2437;&#2480;&#2509;&#2465;&#2494;&#2480; &#2476;&#2495;&#2482;&#2503; &#2474;&#2480;&#2495;&#2476;&#2480;&#2509;&#2468;&#2472;
+addorderhalt=&#2437;&#2480;&#2509;&#2465;&#2494;&#2480; &#2488;&#2509;&#2469;&#2455;&#2495;&#2468; &#2453;&#2480;&#2494;
+cancelorder=&#2437;&#2480;&#2509;&#2465;&#2494;&#2480; &#2476;&#2494;&#2468;&#2495;&#2482;
+searchorder=&#2476;&#2495;&#2482; &#2437;&#2472;&#2497;&#2488;&#2472;&#2509;&#2471;&#2494;&#2472;
+addstatus=&#2437;&#2480;&#2509;&#2465;&#2494;&#2480; &#2437;&#2476;&#2488;&#2509;&#2469;&#2494;&#2472; &#2447;&#2472;&#2509;&#2463;&#2509;&#2480;&#2495;
+ordersettings=&#2437;&#2480;&#2509;&#2465;&#2494;&#2480; &#2488;&#2503;&#2463;&#2495;&#2434;&#2488;
+addnewitem=&#2472;&#2468;&#2497;&#2472; &#2438;&#2439;&#2463;&#2503;&#2478; &#2447;&#2472;&#2509;&#2463;&#2509;&#2480;&#2495;
+# Order And Bill Menu Ends --------------------------------------------------------
 Click=&#2453;&#2509;&#2482;&#2495;&#2453;&#2509;
 addnewitem=&#2472;&#2468;&#2497;&#2472; &#2438;&#2439;&#2463;&#2503;&#2478; &#2447;&#2472;&#2509;&#2463;&#2509;&#2480;&#2495;
