--- a/src/main/webapp/WEB-INF/Language/English_Language_Pack.properties
+++ b/src/main/webapp/WEB-INF/Language/English_Language_Pack.properties
@@ -1,2 +1,22 @@
+#Main Menu -Starts --------------------------------------------------------------------
+menu=Menu
+orderandbill=Orders & Bill
+masterandtailor=Master & Tailor
+labourmanager=Labour Manager
+salesmanmanager=Salesman Manager
+usermanagerment=User Management
+suppliersbook=Suppliers Book
+# Main Menu -Ends ----------------------------------------------------------------------
+# Order And Bill Menu Starts -------------------------------------------------------
+addneworder = Add New Order
+addadvance = Add Advance
+editorderdetails=Edit Order Details
+addorderhalt=Add Order Halt Alert
+cancelorder=Cancel Order
+searchorder=Search Order
+addstatus=Add Status
+ordersettings=Order Settings
+addnewitem=Add New Item
+# Order And Bill Menu Ends --------------------------------------------------------
 Click=Click
 addnewitem=Add New Item
