ADD ORDER IMPLEMENTED

--- a/src/main/webapp/WEB-INF/Language/Bengali_Language_Pack.properties
+++ b/src/main/webapp/WEB-INF/Language/Bengali_Language_Pack.properties
@@ -19,4 +19,8 @@ ordersettings=&#2437;&#2480;&#2509;&#2465;&#2494;&#2480; &#2488;&#2503;&#2463;&#
 addnewitem=&#2472;&#2468;&#2497;&#2472; &#2438;&#2439;&#2463;&#2503;&#2478; &#2447;&#2472;&#2509;&#2463;&#2509;&#2480;&#2495;
 # Order And Bill Menu Ends --------------------------------------------------------
 Click=&#2453;&#2509;&#2482;&#2495;&#2453;&#2509;
-addnewitem=&#2472;&#2468;&#2497;&#2472; &#2438;&#2439;&#2463;&#2503;&#2478; &#2447;&#2472;&#2509;&#2463;&#2509;&#2480;&#2495;
+# Toolbar Starts ---------------------------------------------------------------------------
+addNewItem=&#2472;&#2468;&#2497;&#2472; &#2438;&#2439;&#2463;&#2503;&#2478; &#2447;&#2472;&#2509;&#2463;&#2509;&#2480;&#2495;
+addNewUser=&#2472;&#2468;&#2497;&#2472;  &#2439;&#2441;&#2460;&#2494;&#2480;&#2509; &#2447;&#2472;&#2509;&#2463;&#2509;&#2480;&#2495;
+addNewOrder=&#2472;&#2468;&#2497;&#2472;  &#2437;&#2480;&#2509;&#2465;&#2494;&#2480;  &#2447;&#2472;&#2509;&#2463;&#2509;&#2480;&#2495;
+# Toolbar Ends ------------------------------------------------------------------------
