--- a/src/main/webapp/WEB-INF/Language/English_Language_Pack.properties
+++ b/src/main/webapp/WEB-INF/Language/English_Language_Pack.properties
@@ -19,4 +19,9 @@ ordersettings=Order Settings
 addnewitem=Add New Item
 # Order And Bill Menu Ends --------------------------------------------------------
 Click=Click
-addnewitem=Add New Item
+# Toolbar Starts ---------------------------------------------------------------------------
+addNewItem=ADD NEW ITEM
+addNewUser=ADD NEW USER
+addNewOrder=ADD NEW ORDER
+# Toolbar Ends ----------------------------------------------------------------------------
+
